<resources>
    <string name="app_name">Young fashion store</string>
    <string name="btn_SignIn">SIGN IN</string>
    <string name="btn_SignUp">SIGN UP</string>
    <string name="tv_SignIn">LOGIN</string>
    <string name="tv_SignUp">REGISTER</string>
    <string name="tv_NotYet">Not Account Yet? Create one</string>
    <string name="tv_forgot">Do you forgot passwords ?</string>
    <string name="tv_Already">Already Account? Sign in</string>
    <string name="ev_UserName">Enter Username</string>
    <string name="ev_Email">Enter Email</string>
    <string name="ev_Phone">Enter Phone</string>
    <string name="ev_Address">Enter Address</string>
    <string name="ev_Password">Enter Password</string>
    <string name="ev_ConfirmPassword">Confirm Password</string>
    <string name="otp_title">OTP Verification</string>
    <string name="otp_noti">Enter the OTP sent to your phone number!!</string>
    <string name="otp_missotp">Did not receive the OTP?</string>
    <string name="otp_resend">RESEND OTP</string>
    <string name="submit">Submit</string>
    <string name="btn_addcart">Add to cart</string>
    <string name="btn_buynow">Buy now</string>
    <string name="verify_otp">VERIFY</string>
    <string name="btn_back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>