<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity"
    android:background="@color/back_ground_primary"
    android:padding="4dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_SignIn"
            android:textColor="@color/accent_orange"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/img_login"
            app:layout_constraintVertical_bias="0.05"/>

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:src="@drawable/img_login"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtUseName"
            app:layout_constraintVertical_bias="0.1"/>

        <EditText
            android:id="@+id/txtUseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/ev_UserName"
            app:layout_constraintTop_toBottomOf="@id/img_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtPassword"
            app:layout_constraintVertical_bias="0.2"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/ev_Password"
            android:background="@drawable/edittext_background"
            app:layout_constraintTop_toBottomOf="@id/txtUseName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_forgot"
            app:layout_constraintVertical_bias="0.3"/>

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forgot"
            android:textColor="@color/text_on_pink"
            android:paddingTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSignIn"
            app:layout_constraintVertical_bias="0.4"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_primary"
            android:text="@string/btn_SignIn"
            android:paddingTop="4dp"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvNotAccountYet"
            app:layout_constraintVertical_bias="0.5"/>

        <TextView
            android:id="@+id/tvNotAccountYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_NotYet"
            android:paddingTop="4dp"
            android:textColor="@color/text_on_pink"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.6"/>
</androidx.constraintlayout.widget.ConstraintLayout>
